--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,39 +14,9 @@ env:
   IMAGE_NAME: 01092002/swe-app
 
 jobs:
-  build:
-    name: Build React App
-    runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Build React App
-        run: npm run build
-
-      - name: Upload Build Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: react-build
-          path: build/
-
-  docker:
+  build-and-push:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    needs: build
 
     permissions:
       contents: read
